--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             box-shadow: 10 10 10 10;
             margin: 20;
             border-radius: 25px;
+            display: inline-block
         }
         header {
             padding: 7px;
@@ -38,13 +39,41 @@
             box-shadow: 10 10 10 10;
         }
         #mdiv:hover {
+            transition: 0.85s ease-in;
             background-color: blueviolet;
         }
+        #hr1 {
+            height: 2px;
+            margin: 15px;
+            box-shadow: 0 0 0 0;
+            padding: 1px;
+            background-color: slategray;
+            border: solid 1px sltegray;
+            border-radius: 70px;
+        }
+
+
+        .test {
+            height: 100px;
+            width:100px;
+            padding: 5px;
+            border-radius: 50%;
+            border-top: solid 5px aqua;
+            background-color: rgba(55, 55, 56, 0.45);
+        }
+        .test:hover{
+            animation: first 3s ease 0.10s infinite
+        }
+        @keyframes first {
+            from {transform:rotate(0deg);} 
+            to{transform:rotate(360deg);}
+        }
+
     </style>
 </head>
 <body>
     <header>
-        <h1 id="header">Daksh Jain's Website</h1>
+        <h1 id="header">Daksh Jain's Website</h1> 
     </header>
     <main>
         <div id="mdiv">
@@ -52,6 +81,9 @@
                 Hello! I am Daksh Jain and I welcome you to my own websute which is created by me!<br>
                 This website will contain many things.
             </p>
+        </div>
+        <hr id="hr1">
+        <div class="test">
         </div>
     </main>
 </body>
